manifests/cluster-addons/monitoring/tempo/templates/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tempo-create-s3-buckets
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: tempo
      app.kubernetes.io/name: create-s3-buckets

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: rustfs
            app.kubernetes.io/name: rustfs
      toPorts:
        - ports:
            - port: '9000'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tempo
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: tempo
      app.kubernetes.io/name: tempo

  ingress:
    - fromEndpoints:
        - matchLabels:
            app: grafana
      toPorts:
        - ports:
            - port: '3200'
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: alloy
      toPorts:
        - ports:
            - port: '4317'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: rustfs
            app.kubernetes.io/name: rustfs
      toPorts:
        - ports:
            - port: '9000'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: '9090'
              protocol: TCP
